config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  namespace: eatfresh
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: swwao.courses.orbit.au.dk
    http:
      paths:
      - path: /grp-13/graphql
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 5050
